--- a/src/sass/theme/_theme.scss
+++ b/src/sass/theme/_theme.scss
@@ -199,6 +199,7 @@ p, .sub-topic li, .entry-content li, .topic-row li {
 
 .topic-row:first-of-type{
     border-top: none;
+    margin-top: 0;
 }
 
 .topic-row:last-of-type{
